--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,3 +1,11 @@
+/* color variables */
+$color-black: #000000;
+$color-aqua: #8de0c6;
+$color-yellow: #fff8be;
+
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400;600&family=Montserrat:wght@300;500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
