seperated app logic and display

--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -6,7 +6,7 @@ $color-yellow: #fff8be;
     text-align: center;
 }
 
-.movies{
+.movies, .saved{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row wrap;
