changed disabled button styling

--- a/my-app/src/styles/MovieCard.scss
+++ b/my-app/src/styles/MovieCard.scss
@@ -44,6 +44,7 @@ $color-yellow: #fff8be;
 
 .button-disabled{
     div{
-        cursor: not-allowed;
+        background-color: grey;
+        cursor: initial;
     }
 }
